<resources>
    <string name="app_name">XFSHelper</string>
    <string name="app_version">Ver. 1.0.0</string>
    <string name="action_devices">Device Constants</string>
    <string name="action_about">About</string>
    <string name="main_label_find">XFS Code</string>
    <string name="main_label_help_line1">Find the XFS numeric value name</string>
    <string name="main_label_help_line2">Positive values for commands/events</string>
    <string name="main_label_help_line3">Negative values for errors</string>
    <string name="main_label_result">Result</string>
    <string name="main_switch_execute">Exec</string>
    <string name="main_switch_getinfo">Info</string>
    <string name="main_help_find1">dwCategory</string>
    <string name="main_help_find2">dwCommand</string>
    <string name="main_help_find3">hResult</string>
    <string name="devices_select_label">Interface</string>
    <string name="devices_sensors_arrays_size">Array sizes</string>
    <string name="devices_generic_indices_of">Array indices</string>
    <string name="devices_sensors_values_of">Values for</string>
    <string name="devices_sensors_flags_for">Flags for</string>
    <string name="devices_all_evento">Event: %1$s"</string>
    <string name="devices_manager_messages">Asyn functions Complete Events</string>
    <string name="devices_manager_event_classes">Event classes</string>
    <string name="devices_manager_trace_level">Trace levels</string>
    <string name="devices_manager_error_actions">Error actions</string>
    <string name="devices_manager_system_events_ids">System Event IDs</string>
    <string name="about_xfs_message">XFS version supported: 3.30</string>
    <string name="about_copyright">SuperG © 2019</string>
    <string name="action_devices_add">Add</string>
    <string name="action_devices_undo_selection">Undo</string>
    <string name="devices_add_result_text">Add:</string>
    <string name="devices_add_result_close">Close</string>
    <string name="devices_find_hint">Find</string>
    <string name="devices_getInfo_cmds">WFSGetInfo categories</string>
    <string name="devices_execute_cmds">WFSExecute commands</string>
    <string name="devices_events_cmds">Events</string>
</resources>
